// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`relations sankey base a cyclic edge set (the back-edge dropped, the other four drawn) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":0,"x1":140,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#F2CC0C"]]}}},
{"type":"moveTo","props":{"x":20,"y":1.278344}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.278344,"cpx2":80,"cpy2":0,"x":140,"y":0}},
{"type":"lineTo","props":{"x":140,"y":158.2}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":158.2,"cpx2":80,"cpy2":159.478344,"x":20,"y":159.478344}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":1.278344}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.278344,"cpx2":80,"cpy2":0,"x":140,"y":0}},{"type":"lineTo","props":{"x":140,"y":158.2}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":158.2,"cpx2":80,"cpy2":159.478344,"x":20,"y":159.478344}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":159.478344,"x1":140,"y1":159.478344}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#5794F2"]]}}},
{"type":"moveTo","props":{"x":20,"y":159.478344}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":159.478344,"cpx2":80,"cpy2":166.2,"x":140,"y":166.2}},
{"type":"lineTo","props":{"x":140,"y":234}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.278344,"x":20,"y":227.278344}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":159.478344}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":159.478344,"cpx2":80,"cpy2":166.2,"x":140,"y":166.2}},{"type":"lineTo","props":{"x":140,"y":234}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.278344,"x":20,"y":227.278344}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":0,"x1":280,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#F2CC0C"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":0}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":12.149793,"x":280,"y":12.149793}},
{"type":"lineTo","props":{"x":280,"y":159.049793}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":159.049793,"cpx2":220,"cpy2":146.9,"x":160,"y":146.9}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":0}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":12.149793,"x":280,"y":12.149793}},{"type":"lineTo","props":{"x":280,"y":159.049793}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":159.049793,"cpx2":220,"cpy2":146.9,"x":160,"y":146.9}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":159.049793,"x1":280,"y1":159.049793}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#5794F2"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":166.2}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":166.2,"cpx2":220,"cpy2":159.049793,"x":280,"y":159.049793}},
{"type":"lineTo","props":{"x":280,"y":215.549793}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":215.549793,"cpx2":220,"cpy2":222.7,"x":160,"y":222.7}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":166.2}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":166.2,"cpx2":220,"cpy2":159.049793,"x":280,"y":159.049793}},{"type":"lineTo","props":{"x":280,"y":215.549793}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":215.549793,"cpx2":220,"cpy2":222.7,"x":160,"y":222.7}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":0,"y":1.278344,"width":20,"height":226}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":0,"y":1.278344,"width":20,"height":226}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":0,"width":20,"height":158.2}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":0,"width":20,"height":158.2}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":166.2,"width":20,"height":67.8}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":166.2,"width":20,"height":67.8}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":280,"y":12.149793,"width":20,"height":203.4}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":280,"y":12.149793,"width":20,"height":203.4}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":45,"f":127.278344}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Gateway","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":92.1}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"API","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":213.1}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Web","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":325,"f":126.849793}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"DB","x":0,"y":0,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations sankey base an edges-only response (the same columns, labelled by id) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":0,"x1":140,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#F2CC0C"]]}}},
{"type":"moveTo","props":{"x":20,"y":1.372584}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.372584,"cpx2":80,"cpy2":0,"x":140,"y":0}},
{"type":"lineTo","props":{"x":140,"y":150.666667}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":150.666667,"cpx2":80,"cpy2":152.039251,"x":20,"y":152.039251}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":1.372584}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.372584,"cpx2":80,"cpy2":0,"x":140,"y":0}},{"type":"lineTo","props":{"x":140,"y":150.666667}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":150.666667,"cpx2":80,"cpy2":152.039251,"x":20,"y":152.039251}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":152.039251,"x1":140,"y1":152.039251}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#5794F2"]]}}},
{"type":"moveTo","props":{"x":20,"y":152.039251}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":152.039251,"cpx2":80,"cpy2":158.666667,"x":140,"y":158.666667}},
{"type":"lineTo","props":{"x":140,"y":234}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.372584,"x":20,"y":227.372584}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":152.039251}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":152.039251,"cpx2":80,"cpy2":158.666667,"x":140,"y":158.666667}},{"type":"lineTo","props":{"x":140,"y":234}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.372584,"x":20,"y":227.372584}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":0,"x1":280,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#F2CC0C"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":0}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":15.944748,"x":280,"y":15.944748}},
{"type":"lineTo","props":{"x":280,"y":151.544748}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":151.544748,"cpx2":220,"cpy2":135.6,"x":160,"y":135.6}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":0}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":15.944748,"x":280,"y":15.944748}},{"type":"lineTo","props":{"x":280,"y":151.544748}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":151.544748,"cpx2":220,"cpy2":135.6,"x":160,"y":135.6}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":151.544748,"x1":280,"y1":151.544748}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#5794F2"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":158.666667}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":158.666667,"cpx2":220,"cpy2":151.544748,"x":280,"y":151.544748}},
{"type":"lineTo","props":{"x":280,"y":211.811415}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":211.811415,"cpx2":220,"cpy2":218.933333,"x":160,"y":218.933333}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":158.666667}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":158.666667,"cpx2":220,"cpy2":151.544748,"x":280,"y":151.544748}},{"type":"lineTo","props":{"x":280,"y":211.811415}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":211.811415,"cpx2":220,"cpy2":218.933333,"x":160,"y":218.933333}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":45,"f":127.372584}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"gateway","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":88.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"api","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":209.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"web","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":325,"f":126.878082}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"db","x":0,"y":0,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations sankey base the same nodes and links as flow ribbons (four bars in columns, ribbons weighted by value) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":0,"x1":140,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#F2CC0C"]]}}},
{"type":"moveTo","props":{"x":20,"y":1.372584}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.372584,"cpx2":80,"cpy2":0,"x":140,"y":0}},
{"type":"lineTo","props":{"x":140,"y":150.666667}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":150.666667,"cpx2":80,"cpy2":152.039251,"x":20,"y":152.039251}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":1.372584}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.372584,"cpx2":80,"cpy2":0,"x":140,"y":0}},{"type":"lineTo","props":{"x":140,"y":150.666667}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":150.666667,"cpx2":80,"cpy2":152.039251,"x":20,"y":152.039251}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":152.039251,"x1":140,"y1":152.039251}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#5794F2"]]}}},
{"type":"moveTo","props":{"x":20,"y":152.039251}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":152.039251,"cpx2":80,"cpy2":158.666667,"x":140,"y":158.666667}},
{"type":"lineTo","props":{"x":140,"y":234}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.372584,"x":20,"y":227.372584}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":152.039251}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":152.039251,"cpx2":80,"cpy2":158.666667,"x":140,"y":158.666667}},{"type":"lineTo","props":{"x":140,"y":234}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.372584,"x":20,"y":227.372584}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":0,"x1":280,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#F2CC0C"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":0}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":15.944748,"x":280,"y":15.944748}},
{"type":"lineTo","props":{"x":280,"y":151.544748}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":151.544748,"cpx2":220,"cpy2":135.6,"x":160,"y":135.6}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":0}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":15.944748,"x":280,"y":15.944748}},{"type":"lineTo","props":{"x":280,"y":151.544748}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":151.544748,"cpx2":220,"cpy2":135.6,"x":160,"y":135.6}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":151.544748,"x1":280,"y1":151.544748}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#5794F2"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":158.666667}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":158.666667,"cpx2":220,"cpy2":151.544748,"x":280,"y":151.544748}},
{"type":"lineTo","props":{"x":280,"y":211.811415}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":211.811415,"cpx2":220,"cpy2":218.933333,"x":160,"y":218.933333}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":158.666667}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":158.666667,"cpx2":220,"cpy2":151.544748,"x":280,"y":151.544748}},{"type":"lineTo","props":{"x":280,"y":211.811415}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":211.811415,"cpx2":220,"cpy2":218.933333,"x":160,"y":218.933333}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":45,"f":127.372584}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Gateway","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":88.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"API","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":209.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Web","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":325,"f":126.878082}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"DB","x":0,"y":0,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations sankey geometry node align left (a leaf kept in its earliest column, not pushed to the last) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":0,"x1":140,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#F2CC0C"]]}}},
{"type":"moveTo","props":{"x":20,"y":8}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":8,"cpx2":80,"cpy2":0,"x":140,"y":0}},
{"type":"lineTo","props":{"x":140,"y":173.846154}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":173.846154,"cpx2":80,"cpy2":181.846154,"x":20,"y":181.846154}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":8}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":8,"cpx2":80,"cpy2":0,"x":140,"y":0}},{"type":"lineTo","props":{"x":140,"y":173.846154}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":173.846154,"cpx2":80,"cpy2":181.846154,"x":20,"y":181.846154}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":0,"x1":280,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#F2CC0C"],[1,"#5794F2"]]}}},
{"type":"moveTo","props":{"x":160,"y":0}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":33.491125,"x":280,"y":33.491125}},
{"type":"lineTo","props":{"x":280,"y":189.952664}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":189.952664,"cpx2":220,"cpy2":156.461538,"x":160,"y":156.461538}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":0}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":33.491125,"x":280,"y":33.491125}},{"type":"lineTo","props":{"x":280,"y":189.952664}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":189.952664,"cpx2":220,"cpy2":156.461538,"x":160,"y":156.461538}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":181.846154,"x1":140,"y1":181.846154}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":20,"y":181.846154}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":181.846154,"cpx2":80,"cpy2":181.846154,"x":140,"y":181.846154}},
{"type":"lineTo","props":{"x":140,"y":234}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":234,"x":20,"y":234}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":181.846154}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":181.846154,"cpx2":80,"cpy2":181.846154,"x":140,"y":181.846154}},{"type":"lineTo","props":{"x":140,"y":234}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":234,"x":20,"y":234}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":0,"y":8,"width":20,"height":226}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":0,"y":8,"width":20,"height":226}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":0,"width":20,"height":173.846154}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":0,"width":20,"height":173.846154}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":280,"y":33.491125,"width":20,"height":156.461538}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":280,"y":33.491125,"width":20,"height":156.461538}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":181.846154,"width":20,"height":52.153846}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":181.846154,"width":20,"height":52.153846}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":45,"f":134}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"gateway","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":99.923077}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"api","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":325,"f":124.721894}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"db","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":220.923077}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"cache","x":0,"y":0,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations sankey geometry node width 32 and gap 20 (wider bars, further apart) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":32,"y0":0,"x1":134,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#F2CC0C"]]}}},
{"type":"moveTo","props":{"x":32,"y":5.303289}},
{"type":"bezierCurveTo","props":{"cpx1":83,"cpy1":5.303289,"cpx2":83,"cpy2":0,"x":134,"y":0}},
{"type":"lineTo","props":{"x":134,"y":142.666667}},
{"type":"bezierCurveTo","props":{"cpx1":83,"cpy1":142.666667,"cpx2":83,"cpy2":147.969956,"x":32,"y":147.969956}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":32,"y":5.303289}},{"type":"bezierCurveTo","props":{"cpx1":83,"cpy1":5.303289,"cpx2":83,"cpy2":0,"x":134,"y":0}},{"type":"lineTo","props":{"x":134,"y":142.666667}},{"type":"bezierCurveTo","props":{"cpx1":83,"cpy1":142.666667,"cpx2":83,"cpy2":147.969956,"x":32,"y":147.969956}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":32,"y0":147.969956,"x1":134,"y1":147.969956}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#5794F2"]]}}},
{"type":"moveTo","props":{"x":32,"y":147.969956}},
{"type":"bezierCurveTo","props":{"cpx1":83,"cpy1":147.969956,"cpx2":83,"cpy2":162.666667,"x":134,"y":162.666667}},
{"type":"lineTo","props":{"x":134,"y":234}},
{"type":"bezierCurveTo","props":{"cpx1":83,"cpy1":234,"cpx2":83,"cpy2":219.303289,"x":32,"y":219.303289}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":32,"y":147.969956}},{"type":"bezierCurveTo","props":{"cpx1":83,"cpy1":147.969956,"cpx2":83,"cpy2":162.666667,"x":134,"y":162.666667}},{"type":"lineTo","props":{"x":134,"y":234}},{"type":"bezierCurveTo","props":{"cpx1":83,"cpy1":234,"cpx2":83,"cpy2":219.303289,"x":32,"y":219.303289}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":166,"y0":0,"x1":268,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#F2CC0C"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":166,"y":0}},
{"type":"bezierCurveTo","props":{"cpx1":217,"cpy1":0,"cpx2":217,"cpy2":19.051703,"x":268,"y":19.051703}},
{"type":"lineTo","props":{"x":268,"y":147.451703}},
{"type":"bezierCurveTo","props":{"cpx1":217,"cpy1":147.451703,"cpx2":217,"cpy2":128.4,"x":166,"y":128.4}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":166,"y":0}},{"type":"bezierCurveTo","props":{"cpx1":217,"cpy1":0,"cpx2":217,"cpy2":19.051703,"x":268,"y":19.051703}},{"type":"lineTo","props":{"x":268,"y":147.451703}},{"type":"bezierCurveTo","props":{"cpx1":217,"cpy1":147.451703,"cpx2":217,"cpy2":128.4,"x":166,"y":128.4}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":166,"y0":147.451703,"x1":268,"y1":147.451703}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#5794F2"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":166,"y":162.666667}},
{"type":"bezierCurveTo","props":{"cpx1":217,"cpy1":162.666667,"cpx2":217,"cpy2":147.451703,"x":268,"y":147.451703}},
{"type":"lineTo","props":{"x":268,"y":204.51837}},
{"type":"bezierCurveTo","props":{"cpx1":217,"cpy1":204.51837,"cpx2":217,"cpy2":219.733333,"x":166,"y":219.733333}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":166,"y":162.666667}},{"type":"bezierCurveTo","props":{"cpx1":217,"cpy1":162.666667,"cpx2":217,"cpy2":147.451703,"x":268,"y":147.451703}},{"type":"lineTo","props":{"x":268,"y":204.51837}},{"type":"bezierCurveTo","props":{"cpx1":217,"cpy1":204.51837,"cpx2":217,"cpy2":219.733333,"x":166,"y":219.733333}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":0,"y":5.303289,"width":32,"height":214}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":0,"y":5.303289,"width":32,"height":214}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":134,"y":0,"width":32,"height":142.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":134,"y":0,"width":32,"height":142.666667}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":134,"y":162.666667,"width":32,"height":71.333333}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":134,"y":162.666667,"width":32,"height":71.333333}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":268,"y":19.051703,"width":32,"height":185.466667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":268,"y":19.051703,"width":32,"height":185.466667}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":57,"f":125.303289}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Gateway","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":191,"f":84.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"API","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":191,"f":211.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Web","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":325,"f":124.785036}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"DB","x":0,"y":0,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations sankey geometry ribbon curveness 0 (straight-sided ribbons between the columns) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":0,"x1":140,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#F2CC0C"]]}}},
{"type":"moveTo","props":{"x":20,"y":1.372584}},
{"type":"bezierCurveTo","props":{"cpx1":20,"cpy1":1.372584,"cpx2":140,"cpy2":0,"x":140,"y":0}},
{"type":"lineTo","props":{"x":140,"y":150.666667}},
{"type":"bezierCurveTo","props":{"cpx1":140,"cpy1":150.666667,"cpx2":20,"cpy2":152.039251,"x":20,"y":152.039251}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":1.372584}},{"type":"bezierCurveTo","props":{"cpx1":20,"cpy1":1.372584,"cpx2":140,"cpy2":0,"x":140,"y":0}},{"type":"lineTo","props":{"x":140,"y":150.666667}},{"type":"bezierCurveTo","props":{"cpx1":140,"cpy1":150.666667,"cpx2":20,"cpy2":152.039251,"x":20,"y":152.039251}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":152.039251,"x1":140,"y1":152.039251}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#5794F2"]]}}},
{"type":"moveTo","props":{"x":20,"y":152.039251}},
{"type":"bezierCurveTo","props":{"cpx1":20,"cpy1":152.039251,"cpx2":140,"cpy2":158.666667,"x":140,"y":158.666667}},
{"type":"lineTo","props":{"x":140,"y":234}},
{"type":"bezierCurveTo","props":{"cpx1":140,"cpy1":234,"cpx2":20,"cpy2":227.372584,"x":20,"y":227.372584}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":152.039251}},{"type":"bezierCurveTo","props":{"cpx1":20,"cpy1":152.039251,"cpx2":140,"cpy2":158.666667,"x":140,"y":158.666667}},{"type":"lineTo","props":{"x":140,"y":234}},{"type":"bezierCurveTo","props":{"cpx1":140,"cpy1":234,"cpx2":20,"cpy2":227.372584,"x":20,"y":227.372584}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":0,"x1":280,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#F2CC0C"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":0}},
{"type":"bezierCurveTo","props":{"cpx1":160,"cpy1":0,"cpx2":280,"cpy2":15.944748,"x":280,"y":15.944748}},
{"type":"lineTo","props":{"x":280,"y":151.544748}},
{"type":"bezierCurveTo","props":{"cpx1":280,"cpy1":151.544748,"cpx2":160,"cpy2":135.6,"x":160,"y":135.6}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":0}},{"type":"bezierCurveTo","props":{"cpx1":160,"cpy1":0,"cpx2":280,"cpy2":15.944748,"x":280,"y":15.944748}},{"type":"lineTo","props":{"x":280,"y":151.544748}},{"type":"bezierCurveTo","props":{"cpx1":280,"cpy1":151.544748,"cpx2":160,"cpy2":135.6,"x":160,"y":135.6}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":151.544748,"x1":280,"y1":151.544748}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#5794F2"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":158.666667}},
{"type":"bezierCurveTo","props":{"cpx1":160,"cpy1":158.666667,"cpx2":280,"cpy2":151.544748,"x":280,"y":151.544748}},
{"type":"lineTo","props":{"x":280,"y":211.811415}},
{"type":"bezierCurveTo","props":{"cpx1":280,"cpy1":211.811415,"cpx2":160,"cpy2":218.933333,"x":160,"y":218.933333}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":158.666667}},{"type":"bezierCurveTo","props":{"cpx1":160,"cpy1":158.666667,"cpx2":280,"cpy2":151.544748,"x":280,"y":151.544748}},{"type":"lineTo","props":{"x":280,"y":211.811415}},{"type":"bezierCurveTo","props":{"cpx1":280,"cpy1":211.811415,"cpx2":160,"cpy2":218.933333,"x":160,"y":218.933333}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":45,"f":127.372584}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Gateway","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":88.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"API","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":209.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Web","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":325,"f":126.878082}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"DB","x":0,"y":0,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations sankey geometry ribbon opacity 0.7 (ribbons nearly solid over the background) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":0.7}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":0.7}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":0,"x1":140,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#F2CC0C"]]}}},
{"type":"moveTo","props":{"x":20,"y":1.372584}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.372584,"cpx2":80,"cpy2":0,"x":140,"y":0}},
{"type":"lineTo","props":{"x":140,"y":150.666667}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":150.666667,"cpx2":80,"cpy2":152.039251,"x":20,"y":152.039251}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":1.372584}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.372584,"cpx2":80,"cpy2":0,"x":140,"y":0}},{"type":"lineTo","props":{"x":140,"y":150.666667}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":150.666667,"cpx2":80,"cpy2":152.039251,"x":20,"y":152.039251}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":152.039251,"x1":140,"y1":152.039251}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#5794F2"]]}}},
{"type":"moveTo","props":{"x":20,"y":152.039251}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":152.039251,"cpx2":80,"cpy2":158.666667,"x":140,"y":158.666667}},
{"type":"lineTo","props":{"x":140,"y":234}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.372584,"x":20,"y":227.372584}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":152.039251}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":152.039251,"cpx2":80,"cpy2":158.666667,"x":140,"y":158.666667}},{"type":"lineTo","props":{"x":140,"y":234}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.372584,"x":20,"y":227.372584}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":0,"x1":280,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#F2CC0C"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":0}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":15.944748,"x":280,"y":15.944748}},
{"type":"lineTo","props":{"x":280,"y":151.544748}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":151.544748,"cpx2":220,"cpy2":135.6,"x":160,"y":135.6}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":0}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":15.944748,"x":280,"y":15.944748}},{"type":"lineTo","props":{"x":280,"y":151.544748}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":151.544748,"cpx2":220,"cpy2":135.6,"x":160,"y":135.6}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":151.544748,"x1":280,"y1":151.544748}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#5794F2"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":158.666667}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":158.666667,"cpx2":220,"cpy2":151.544748,"x":280,"y":151.544748}},
{"type":"lineTo","props":{"x":280,"y":211.811415}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":211.811415,"cpx2":220,"cpy2":218.933333,"x":160,"y":218.933333}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":158.666667}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":158.666667,"cpx2":220,"cpy2":151.544748,"x":280,"y":151.544748}},{"type":"lineTo","props":{"x":280,"y":211.811415}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":211.811415,"cpx2":220,"cpy2":218.933333,"x":160,"y":218.933333}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":45,"f":127.372584}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Gateway","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":88.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"API","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":209.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Web","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":325,"f":126.878082}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"DB","x":0,"y":0,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations sankey labels edge values on (a weight drawn on each ribbon) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":0,"x1":140,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#F2CC0C"]]}}},
{"type":"moveTo","props":{"x":20,"y":1.372584}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.372584,"cpx2":80,"cpy2":0,"x":140,"y":0}},
{"type":"lineTo","props":{"x":140,"y":150.666667}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":150.666667,"cpx2":80,"cpy2":152.039251,"x":20,"y":152.039251}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":1.372584}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.372584,"cpx2":80,"cpy2":0,"x":140,"y":0}},{"type":"lineTo","props":{"x":140,"y":150.666667}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":150.666667,"cpx2":80,"cpy2":152.039251,"x":20,"y":152.039251}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":152.039251,"x1":140,"y1":152.039251}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#5794F2"]]}}},
{"type":"moveTo","props":{"x":20,"y":152.039251}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":152.039251,"cpx2":80,"cpy2":158.666667,"x":140,"y":158.666667}},
{"type":"lineTo","props":{"x":140,"y":234}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.372584,"x":20,"y":227.372584}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":152.039251}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":152.039251,"cpx2":80,"cpy2":158.666667,"x":140,"y":158.666667}},{"type":"lineTo","props":{"x":140,"y":234}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.372584,"x":20,"y":227.372584}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":0,"x1":280,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#F2CC0C"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":0}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":15.944748,"x":280,"y":15.944748}},
{"type":"lineTo","props":{"x":280,"y":151.544748}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":151.544748,"cpx2":220,"cpy2":135.6,"x":160,"y":135.6}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":0}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":15.944748,"x":280,"y":15.944748}},{"type":"lineTo","props":{"x":280,"y":151.544748}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":151.544748,"cpx2":220,"cpy2":135.6,"x":160,"y":135.6}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":151.544748,"x1":280,"y1":151.544748}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#5794F2"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":158.666667}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":158.666667,"cpx2":220,"cpy2":151.544748,"x":280,"y":151.544748}},
{"type":"lineTo","props":{"x":280,"y":211.811415}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":211.811415,"cpx2":220,"cpy2":218.933333,"x":160,"y":218.933333}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":158.666667}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":158.666667,"cpx2":220,"cpy2":151.544748,"x":280,"y":151.544748}},{"type":"lineTo","props":{"x":280,"y":211.811415}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":211.811415,"cpx2":220,"cpy2":218.933333,"x":160,"y":218.933333}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":100,"f":89.019625}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"100","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":100,"f":206.019625}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"50","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":240,"f":88.772374}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"90","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":240,"f":198.239041}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"40","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":45,"f":127.372584}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Gateway","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":88.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"API","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":185,"f":209.333333}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Web","x":0,"y":0,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":325,"f":126.878082}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"left"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"DB","x":0,"y":0,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations sankey labels node labels off (bars and ribbons, no text) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":0,"x1":140,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#F2CC0C"]]}}},
{"type":"moveTo","props":{"x":20,"y":1.372584}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.372584,"cpx2":80,"cpy2":0,"x":140,"y":0}},
{"type":"lineTo","props":{"x":140,"y":150.666667}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":150.666667,"cpx2":80,"cpy2":152.039251,"x":20,"y":152.039251}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":1.372584}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":1.372584,"cpx2":80,"cpy2":0,"x":140,"y":0}},{"type":"lineTo","props":{"x":140,"y":150.666667}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":150.666667,"cpx2":80,"cpy2":152.039251,"x":20,"y":152.039251}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":20,"y0":152.039251,"x1":140,"y1":152.039251}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#5794F2"]]}}},
{"type":"moveTo","props":{"x":20,"y":152.039251}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":152.039251,"cpx2":80,"cpy2":158.666667,"x":140,"y":158.666667}},
{"type":"lineTo","props":{"x":140,"y":234}},
{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.372584,"x":20,"y":227.372584}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":20,"y":152.039251}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":152.039251,"cpx2":80,"cpy2":158.666667,"x":140,"y":158.666667}},{"type":"lineTo","props":{"x":140,"y":234}},{"type":"bezierCurveTo","props":{"cpx1":80,"cpy1":234,"cpx2":80,"cpy2":227.372584,"x":20,"y":227.372584}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":0,"x1":280,"y1":0}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#F2CC0C"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":0}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":15.944748,"x":280,"y":15.944748}},
{"type":"lineTo","props":{"x":280,"y":151.544748}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":151.544748,"cpx2":220,"cpy2":135.6,"x":160,"y":135.6}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":0}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":0,"cpx2":220,"cpy2":15.944748,"x":280,"y":15.944748}},{"type":"lineTo","props":{"x":280,"y":151.544748}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":151.544748,"cpx2":220,"cpy2":135.6,"x":160,"y":135.6}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":160,"y0":151.544748,"x1":280,"y1":151.544748}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#5794F2"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":160,"y":158.666667}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":158.666667,"cpx2":220,"cpy2":151.544748,"x":280,"y":151.544748}},
{"type":"lineTo","props":{"x":280,"y":211.811415}},
{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":211.811415,"cpx2":220,"cpy2":218.933333,"x":160,"y":218.933333}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":160,"y":158.666667}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":158.666667,"cpx2":220,"cpy2":151.544748,"x":280,"y":151.544748}},{"type":"lineTo","props":{"x":280,"y":211.811415}},{"type":"bezierCurveTo","props":{"cpx1":220,"cpy1":211.811415,"cpx2":220,"cpy2":218.933333,"x":160,"y":218.933333}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":0,"y":1.372584,"width":20,"height":226}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":0,"width":20,"height":150.666667}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":140,"y":158.666667,"width":20,"height":75.333333}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":280,"y":15.944748,"width":20,"height":195.866667}}],"fillRule":"nonzero"}},
{"type":"restore","props":{}}
]
`;

exports[`relations sankey orientation long names on a vertical flow (each truncated, none over the next bar) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":0,"y0":20,"x1":0,"y1":107}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#F2CC0C"]]}}},
{"type":"moveTo","props":{"x":1.020623,"y":20}},
{"type":"bezierCurveTo","props":{"cpx1":1.020623,"cpy1":63.5,"cpx2":0,"cpy2":63.5,"x":0,"y":107}},
{"type":"lineTo","props":{"x":194.666667,"y":107}},
{"type":"bezierCurveTo","props":{"cpx1":194.666667,"cpy1":63.5,"cpx2":195.687289,"cpy2":63.5,"x":195.687289,"y":20}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1.020623,"y":20}},{"type":"bezierCurveTo","props":{"cpx1":1.020623,"cpy1":63.5,"cpx2":0,"cpy2":63.5,"x":0,"y":107}},{"type":"lineTo","props":{"x":194.666667,"y":107}},{"type":"bezierCurveTo","props":{"cpx1":194.666667,"cpy1":63.5,"cpx2":195.687289,"cpy2":63.5,"x":195.687289,"y":20}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":195.687289,"y0":20,"x1":195.687289,"y1":107}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#5794F2"]]}}},
{"type":"moveTo","props":{"x":195.687289,"y":20}},
{"type":"bezierCurveTo","props":{"cpx1":195.687289,"cpy1":63.5,"cpx2":202.666667,"cpy2":63.5,"x":202.666667,"y":107}},
{"type":"lineTo","props":{"x":300,"y":107}},
{"type":"bezierCurveTo","props":{"cpx1":300,"cpy1":63.5,"cpx2":293.020623,"cpy2":63.5,"x":293.020623,"y":20}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":195.687289,"y":20}},{"type":"bezierCurveTo","props":{"cpx1":195.687289,"cpy1":63.5,"cpx2":202.666667,"cpy2":63.5,"x":202.666667,"y":107}},{"type":"lineTo","props":{"x":300,"y":107}},{"type":"bezierCurveTo","props":{"cpx1":300,"cpy1":63.5,"cpx2":293.020623,"cpy2":63.5,"x":293.020623,"y":20}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":0,"y0":127,"x1":0,"y1":214}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#F2CC0C"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":0,"y":127}},
{"type":"bezierCurveTo","props":{"cpx1":0,"cpy1":170.5,"cpx2":19.857776,"cpy2":170.5,"x":19.857776,"y":214}},
{"type":"lineTo","props":{"x":195.057776,"y":214}},
{"type":"bezierCurveTo","props":{"cpx1":195.057776,"cpy1":170.5,"cpx2":175.2,"cpy2":170.5,"x":175.2,"y":127}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":127}},{"type":"bezierCurveTo","props":{"cpx1":0,"cpy1":170.5,"cpx2":19.857776,"cpy2":170.5,"x":19.857776,"y":214}},{"type":"lineTo","props":{"x":195.057776,"y":214}},{"type":"bezierCurveTo","props":{"cpx1":195.057776,"cpy1":170.5,"cpx2":175.2,"cpy2":170.5,"x":175.2,"y":127}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":195.057776,"y0":127,"x1":195.057776,"y1":214}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#5794F2"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":202.666667,"y":127}},
{"type":"bezierCurveTo","props":{"cpx1":202.666667,"cpy1":170.5,"cpx2":195.057776,"cpy2":170.5,"x":195.057776,"y":214}},
{"type":"lineTo","props":{"x":272.924443,"y":214}},
{"type":"bezierCurveTo","props":{"cpx1":272.924443,"cpy1":170.5,"cpx2":280.533333,"cpy2":170.5,"x":280.533333,"y":127}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":202.666667,"y":127}},{"type":"bezierCurveTo","props":{"cpx1":202.666667,"cpy1":170.5,"cpx2":195.057776,"cpy2":170.5,"x":195.057776,"y":214}},{"type":"lineTo","props":{"x":272.924443,"y":214}},{"type":"bezierCurveTo","props":{"cpx1":272.924443,"cpy1":170.5,"cpx2":280.533333,"cpy2":170.5,"x":280.533333,"y":127}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":1.020623,"y":0,"width":292,"height":20}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":1.020623,"y":0,"width":292,"height":20}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":0,"y":107,"width":194.666667,"height":20}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":0,"y":107,"width":194.666667,"height":20}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":202.666667,"y":107,"width":97.333333,"height":20}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":202.666667,"y":107,"width":97.333333,"height":20}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":19.857776,"y":214,"width":253.066667,"height":20}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":19.857776,"y":214,"width":253.066667,"height":20}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":167.020623,"f":38}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"edge-gateway-ingre...","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":117.333333,"f":145}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"checkout-api-servic...","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":271.333333,"f":145}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"storefront-web-front...","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":166.39111,"f":252}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"orders-postgres-pri...","x":0,"y":6,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations sankey orientation vertical flow (bars in rows, each label below its bar) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":20,"f":13}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"globalAlpha","props":{"value":0.2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":0,"y0":20,"x1":0,"y1":107}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#F2CC0C"]]}}},
{"type":"moveTo","props":{"x":1.020623,"y":20}},
{"type":"bezierCurveTo","props":{"cpx1":1.020623,"cpy1":63.5,"cpx2":0,"cpy2":63.5,"x":0,"y":107}},
{"type":"lineTo","props":{"x":194.666667,"y":107}},
{"type":"bezierCurveTo","props":{"cpx1":194.666667,"cpy1":63.5,"cpx2":195.687289,"cpy2":63.5,"x":195.687289,"y":20}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1.020623,"y":20}},{"type":"bezierCurveTo","props":{"cpx1":1.020623,"cpy1":63.5,"cpx2":0,"cpy2":63.5,"x":0,"y":107}},{"type":"lineTo","props":{"x":194.666667,"y":107}},{"type":"bezierCurveTo","props":{"cpx1":194.666667,"cpy1":63.5,"cpx2":195.687289,"cpy2":63.5,"x":195.687289,"y":20}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":195.687289,"y0":20,"x1":195.687289,"y1":107}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#73BF69"],[1,"#5794F2"]]}}},
{"type":"moveTo","props":{"x":195.687289,"y":20}},
{"type":"bezierCurveTo","props":{"cpx1":195.687289,"cpy1":63.5,"cpx2":202.666667,"cpy2":63.5,"x":202.666667,"y":107}},
{"type":"lineTo","props":{"x":300,"y":107}},
{"type":"bezierCurveTo","props":{"cpx1":300,"cpy1":63.5,"cpx2":293.020623,"cpy2":63.5,"x":293.020623,"y":20}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":195.687289,"y":20}},{"type":"bezierCurveTo","props":{"cpx1":195.687289,"cpy1":63.5,"cpx2":202.666667,"cpy2":63.5,"x":202.666667,"y":107}},{"type":"lineTo","props":{"x":300,"y":107}},{"type":"bezierCurveTo","props":{"cpx1":300,"cpy1":63.5,"cpx2":293.020623,"cpy2":63.5,"x":293.020623,"y":20}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":0,"y0":127,"x1":0,"y1":214}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#F2CC0C"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":0,"y":127}},
{"type":"bezierCurveTo","props":{"cpx1":0,"cpy1":170.5,"cpx2":19.857776,"cpy2":170.5,"x":19.857776,"y":214}},
{"type":"lineTo","props":{"x":195.057776,"y":214}},
{"type":"bezierCurveTo","props":{"cpx1":195.057776,"cpy1":170.5,"cpx2":175.2,"cpy2":170.5,"x":175.2,"y":127}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":127}},{"type":"bezierCurveTo","props":{"cpx1":0,"cpy1":170.5,"cpx2":19.857776,"cpy2":170.5,"x":19.857776,"y":214}},{"type":"lineTo","props":{"x":195.057776,"y":214}},{"type":"bezierCurveTo","props":{"cpx1":195.057776,"cpy1":170.5,"cpx2":175.2,"cpy2":170.5,"x":175.2,"y":127}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"beginPath","props":{}},
{"type":"createLinearGradient","props":{"x0":195.057776,"y0":127,"x1":195.057776,"y1":214}},
{"type":"fillStyle","props":{"value":{"addColorStop":[[0,"#5794F2"],[1,"#FF9830"]]}}},
{"type":"moveTo","props":{"x":202.666667,"y":127}},
{"type":"bezierCurveTo","props":{"cpx1":202.666667,"cpy1":170.5,"cpx2":195.057776,"cpy2":170.5,"x":195.057776,"y":214}},
{"type":"lineTo","props":{"x":272.924443,"y":214}},
{"type":"bezierCurveTo","props":{"cpx1":272.924443,"cpy1":170.5,"cpx2":280.533333,"cpy2":170.5,"x":280.533333,"y":127}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":202.666667,"y":127}},{"type":"bezierCurveTo","props":{"cpx1":202.666667,"cpy1":170.5,"cpx2":195.057776,"cpy2":170.5,"x":195.057776,"y":214}},{"type":"lineTo","props":{"x":272.924443,"y":214}},{"type":"bezierCurveTo","props":{"cpx1":272.924443,"cpy1":170.5,"cpx2":280.533333,"cpy2":170.5,"x":280.533333,"y":127}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":1.020623,"y":0,"width":292,"height":20}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":1.020623,"y":0,"width":292,"height":20}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":0,"y":107,"width":194.666667,"height":20}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":0,"y":107,"width":194.666667,"height":20}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":202.666667,"y":107,"width":97.333333,"height":20}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":202.666667,"y":107,"width":97.333333,"height":20}}],"fillRule":"nonzero"}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":19.857776,"y":214,"width":253.066667,"height":20}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":19.857776,"y":214,"width":253.066667,"height":20}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":167.020623,"f":38}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Gateway","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":117.333333,"f":145}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"API","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":271.333333,"f":145}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Web","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":166.39111,"f":252}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"DB","x":0,"y":6,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;
